# Personal_Lab_DngBack

./: .gitignore  README.md
air_scenario_lab/: README.md  main.py  pyproject.toml  requirements.txt
air_scenario_lab/configs/scenarios/: admission_crunch.yaml  admission_crunch_cold.yaml  phase2_3k.yaml  phase2_3k_tight.yaml  phase2_5k_hard.yaml  phase2_6k.yaml  steady_baseline.yaml
air_scenario_lab/output/admission_crunch/: bench_report.json  index.json  probe_details.jsonl  probe_distribution_spec.json  probes.jsonl  request_metrics.jsonl  trace.jsonl  trace_meta.json
air_scenario_lab/output/admission_crunch/payloads/: r-00001.json  r-00002.json  (+498 more)
air_scenario_lab/output/steady_baseline/: bench_report.json  index.json  probe_details.jsonl  probe_distribution_spec.json  probes.jsonl  request_metrics.jsonl  trace.jsonl  trace_meta.json
air_scenario_lab/scripts/: check_hf_data.sh  run_workflow.sh  smoke_test.py  start_vllm.sh
air_scenario_lab/src/lab/: __init__.py  arrivals.py  check_hf.py  config.py  generate.py  metrics.py  probes_util.py  run.py  storage.py  summarize.py  tokens.py  trace_lengths.py
qwen3_deltanet_opt/: pyproject.toml
qwen3_deltanet_opt/results/: baseline.json  baseline_vs_fused.csv  fused.json  output_drift.json  output_drift_after_fix.json  output_drift_baseline_gpu0_vs_gpu1.json  output_drift_fla_tile.json  output_drift_rerun.json
qwen3_deltanet_opt/scripts/: _launch_baseline.py  _launch_optimized.py  check_output_drift.py  compare.sh  run_bench.sh  run_inference.py  start_baseline.sh  start_optimized.sh
qwen3_deltanet_opt/src/dng_opt/: __init__.py  patch.py
qwen3_deltanet_opt/tests/: test_fused_kernel.py  test_patch_loads.py
(+477 files in other folders)
