[project]
name = "air-scenario-lab"
version = "0.1.0"
description = "LLM inference benchmark scenario generator and replay engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pandas",
    "datasets==4.4.1",
    "huggingface_hub==0.34.4",
    "transformers==4.57.1",
    "charset-normalizer>=3.0",
]

[project.scripts]
lab-generate = "lab.generate:main"
lab-run = "lab.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
