[project]
name = "dng-opt"
version = "0.1.0"
description = "Fused Gated DeltaNet decode-path kernel for Qwen3.5"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8",
    "httpx>=0.27",
    "numpy>=1.24",
    "rich>=13.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dng_opt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# vLLM is a local editable install — run once before using this project:
#   cd ../vllm && uv pip install -e . --torch-backend=auto
# Then install this project:
#   uv pip install -e ".[dev]"
# ---------------------------------------------------------------------------
